<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp">

    <GridLayout
        android:id="@+id/functionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/notes"
            style="@style/KeyboardButtonStyle"
            app:icon="@drawable/ic_notes"
            android:text="@string/keyboard_notes" />

        <Button
            android:id="@+id/delete"
            style="@style/KeyboardButtonStyle"
            app:icon="@drawable/ic_delete"
            android:text="@string/keyboard_delete" />

        <Button
            android:id="@+id/pause"
            style="@style/KeyboardButtonStyle"
            app:icon="@drawable/ic_pause"
            android:text="@string/keyboard_pause" />

    </GridLayout>

    <GridLayout
        android:id="@+id/keyGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/functionButtons"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:columnCount="9"
        android:orientation="horizontal">

        <Button
            android:id="@+id/num1"
            style="@style/KeyboardNumberButtonStyle"
            android:text="1" />

        <Button
            android:id="@+id/num2"
            style="@style/KeyboardNumberButtonStyle"
            android:text="2" />

        <Button
            android:id="@+id/num3"
            style="@style/KeyboardNumberButtonStyle"
            android:text="3" />

        <Button
            android:id="@+id/num4"
            style="@style/KeyboardNumberButtonStyle"
            android:text="4" />

        <Button
            android:id="@+id/num5"
            style="@style/KeyboardNumberButtonStyle"
            android:text="5" />

        <Button
            android:id="@+id/num6"
            style="@style/KeyboardNumberButtonStyle"
            android:text="6" />

        <Button
            android:id="@+id/num7"
            style="@style/KeyboardNumberButtonStyle"
            android:text="7" />

        <Button
            android:id="@+id/num8"
            style="@style/KeyboardNumberButtonStyle"
            android:text="8" />

        <Button
            android:id="@+id/num9"
            style="@style/KeyboardNumberButtonStyle"
            android:text="9" />

    </GridLayout>

</RelativeLayout>
