<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutField"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewStub
        android:id="@+id/notesGridStub"
        android:inflatedId="@+id/notesGrid"
        android:layout="@layout/sudoku_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/numberView"
        style="@style/SudokuNumberStyle" />

</RelativeLayout>
