...
    android:id="@+id/sudokuGrid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:columnCount="3"
        android:padding="@dimen/_2sdp"
...
